# Solaris

./: .gitignore  .shadowtracer_history.json  Dockerfile  README.md  attack_graph.html  cli_dashboard.py  cli_ui_components.py  cluster-graph.json  data_collector.py  final_data_collector.py  final_graph_builder.py  graph_visualizer.py  mock-cluster-graph.json  pdf_reporter.py  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  shadowtracer.py
shadowtracer-pkg/: pyproject.toml
shadowtracer-pkg/shadowtracer/: __init__.py  cli_dashboard.py  cli_ui_components.py  config.py  cve_scorer.py  data_collector.py  graph_builder.py  graph_visualizer.py  pdf_reporter.py  shadowtracer.py
